Small bug squash--menu on iPhone positioning

--- a/_src/sass/layout/_nav.scss
+++ b/_src/sass/layout/_nav.scss
@@ -11,6 +11,8 @@ header {
 	display: flex;
 	position: fixed;
 	width: 100%;
+	top: 0;
+	left: 0;
 	max-width: 144rem;
 	align-items: center;
 	justify-content: space-between;
